// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> should render datepicker 1`] = `
[
  <Text
    accessibilityLabel=""
    collapsable={false}
    dark={false}
    error=""
    isPlaceholder={true}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 15,
          "lineHeight": 18,
        },
        {
          "color": "#ffffff",
          "lineHeight": 19,
          "paddingBottom": 16,
        },
        {
          "fontSize": 18,
          "top": 40,
        },
      ]
    }
    variant="md"
  />,
  <DatePicker
    androidMode="spinner"
    cancelBtnText="Cancelar"
    confirmBtnText="Confirmar"
    customStyles={
      {
        "dateInput": {
          "borderWidth": 0,
        },
        "dateText": {
          "color": "#fff",
          "fontSize": 14,
          "fontWeight": "700",
          "left": 0,
          "position": "absolute",
        },
        "dateTouchBody": {
          "width": "100%",
        },
        "disabled": {
          "backgroundColor": "transparent",
        },
        "placeholderText": {
          "color": "#fff",
          "fontSize": 18,
          "left": 0,
          "position": "absolute",
        },
      }
    }
    dark={false}
    date=""
    editable={false}
    format="DD/MM/YYYY"
    locale="pt-BR"
    mode="date"
    onDateChange={[Function]}
    placeholder=" "
    showIcon={false}
    style={
      [
        {
          "width": "100%",
        },
      ]
    }
  />,
  <View
    dark={false}
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "height": 0.5,
        },
      ]
    }
  />,
]
`;

exports[`<DatePicker /> should render datepicker with button cancel text 1`] = `
[
  <Text
    accessibilityLabel=""
    collapsable={false}
    dark={false}
    error=""
    isPlaceholder={true}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 15,
          "lineHeight": 18,
        },
        {
          "color": "#ffffff",
          "lineHeight": 19,
          "paddingBottom": 16,
        },
        {
          "fontSize": 18,
          "top": 40,
        },
      ]
    }
    variant="md"
  />,
  <DatePicker
    androidMode="spinner"
    cancelBtnText="test"
    confirmBtnText="Confirmar"
    customStyles={
      {
        "dateInput": {
          "borderWidth": 0,
        },
        "dateText": {
          "color": "#fff",
          "fontSize": 14,
          "fontWeight": "700",
          "left": 0,
          "position": "absolute",
        },
        "dateTouchBody": {
          "width": "100%",
        },
        "disabled": {
          "backgroundColor": "transparent",
        },
        "placeholderText": {
          "color": "#fff",
          "fontSize": 18,
          "left": 0,
          "position": "absolute",
        },
      }
    }
    dark={false}
    date=""
    editable={false}
    format="DD/MM/YYYY"
    locale="pt-BR"
    mode="date"
    onDateChange={[Function]}
    placeholder=" "
    showIcon={false}
    style={
      [
        {
          "width": "100%",
        },
      ]
    }
  />,
  <View
    dark={false}
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "height": 0.5,
        },
      ]
    }
  />,
]
`;

exports[`<DatePicker /> should render datepicker with custom props 1`] = `
[
  <Text
    accessibilityLabel=""
    collapsable={false}
    dark={false}
    error=""
    isPlaceholder={true}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 15,
          "lineHeight": 18,
        },
        {
          "color": "#ffffff",
          "lineHeight": 19,
          "paddingBottom": 16,
        },
        {
          "fontSize": 18,
          "top": 40,
        },
      ]
    }
    variant="md"
  />,
  <DatePicker
    androidMode="calendar"
    cancelBtnText="Cancelar"
    confirmBtnText="test"
    customStyles={
      {
        "dateInput": {
          "borderWidth": 0,
        },
        "dateText": {
          "color": "#fff",
          "fontSize": 14,
          "fontWeight": "700",
          "left": 0,
          "position": "absolute",
        },
        "dateTouchBody": {
          "width": "100%",
        },
        "disabled": {
          "backgroundColor": "transparent",
        },
        "placeholderText": {
          "color": "#fff",
          "fontSize": 18,
          "left": 0,
          "position": "absolute",
        },
      }
    }
    dark={false}
    date=""
    editable={true}
    format="yyyy-MM-dd"
    locale="en"
    maxDate="2021-12-31"
    mode="date"
    onDateChange={[Function]}
    placeholder=" "
    showIcon={false}
    style={
      [
        {
          "width": "100%",
        },
      ]
    }
    testID="test"
  />,
  <View
    dark={false}
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "height": 0.5,
        },
      ]
    }
  />,
]
`;

exports[`<DatePicker /> should render datepicker with error 1`] = `
[
  <Text
    accessibilityLabel=""
    collapsable={false}
    dark={false}
    error="test"
    isPlaceholder={true}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 15,
          "lineHeight": 18,
        },
        {
          "color": "#ffffff",
          "lineHeight": 19,
          "paddingBottom": 16,
        },
        {
          "fontSize": 18,
          "top": 40,
        },
      ]
    }
    variant="md"
  />,
  <DatePicker
    androidMode="spinner"
    cancelBtnText="Cancelar"
    confirmBtnText="Confirmar"
    customStyles={
      {
        "dateInput": {
          "borderColor": "#cc0000",
        },
        "dateText": {
          "color": "#fff",
          "fontSize": 14,
          "fontWeight": "700",
          "left": 0,
          "position": "absolute",
        },
        "dateTouchBody": {
          "width": "100%",
        },
        "disabled": {
          "backgroundColor": "transparent",
        },
        "placeholderText": {
          "color": "#fff",
          "fontSize": 18,
          "left": 0,
          "position": "absolute",
        },
      }
    }
    dark={false}
    date=""
    editable={false}
    format="DD/MM/YYYY"
    locale="pt-BR"
    mode="date"
    onDateChange={[Function]}
    placeholder=" "
    showIcon={false}
    style={
      [
        {
          "width": "100%",
        },
      ]
    }
  />,
  <View
    dark={false}
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "height": 0.5,
        },
      ]
    }
  />,
  <Text
    accessibilityLabel="Erro test"
    centered={false}
    large={false}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 13,
          "lineHeight": 15.6,
        },
        {
          "color": "#FF4F3F",
          "marginTop": 4,
          "textAlign": "left",
        },
      ]
    }
    testID="error_testing"
    variant="xs"
  >
    test
  </Text>,
]
`;

exports[`<DatePicker /> should render datepicker with label 1`] = `
[
  <Text
    accessibilityLabel="test"
    collapsable={false}
    dark={false}
    error=""
    isPlaceholder={true}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 15,
          "lineHeight": 18,
        },
        {
          "color": "#ffffff",
          "lineHeight": 19,
          "paddingBottom": 16,
        },
        {
          "fontSize": 18,
          "top": 40,
        },
      ]
    }
    variant="md"
  >
    test
  </Text>,
  <DatePicker
    androidMode="spinner"
    cancelBtnText="Cancelar"
    confirmBtnText="Confirmar"
    customStyles={
      {
        "dateInput": {
          "borderWidth": 0,
        },
        "dateText": {
          "color": "#fff",
          "fontSize": 14,
          "fontWeight": "700",
          "left": 0,
          "position": "absolute",
        },
        "dateTouchBody": {
          "width": "100%",
        },
        "disabled": {
          "backgroundColor": "transparent",
        },
        "placeholderText": {
          "color": "#fff",
          "fontSize": 18,
          "left": 0,
          "position": "absolute",
        },
      }
    }
    dark={false}
    date=""
    editable={false}
    format="DD/MM/YYYY"
    locale="pt-BR"
    mode="date"
    onDateChange={[Function]}
    placeholder=" "
    showIcon={false}
    style={
      [
        {
          "width": "100%",
        },
      ]
    }
  />,
  <View
    dark={false}
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "height": 0.5,
        },
      ]
    }
  />,
]
`;

exports[`<DatePicker /> should render datepicker with value 1`] = `
[
  <Text
    accessibilityLabel=""
    collapsable={false}
    dark={false}
    error=""
    isPlaceholder={true}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 15,
          "lineHeight": 18,
        },
        {
          "color": "#ffffff",
          "lineHeight": 19,
          "paddingBottom": 16,
        },
        {
          "fontSize": 18,
          "top": 40,
        },
      ]
    }
    variant="md"
  />,
  <DatePicker
    androidMode="spinner"
    cancelBtnText="Cancelar"
    confirmBtnText="Confirmar"
    customStyles={
      {
        "dateInput": {
          "borderWidth": 0,
        },
        "dateText": {
          "color": "#fff",
          "fontSize": 14,
          "fontWeight": "700",
          "left": 0,
          "position": "absolute",
        },
        "dateTouchBody": {
          "width": "100%",
        },
        "disabled": {
          "backgroundColor": "transparent",
        },
        "placeholderText": {
          "color": "#fff",
          "fontSize": 18,
          "left": 0,
          "position": "absolute",
        },
      }
    }
    dark={false}
    date=""
    editable={false}
    format="DD/MM/YYYY"
    locale="pt-BR"
    mode="date"
    onDateChange={[Function]}
    placeholder=" "
    showIcon={false}
    style={
      [
        {
          "width": "100%",
        },
      ]
    }
  />,
  <View
    dark={false}
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "height": 0.5,
        },
      ]
    }
  />,
]
`;
